fix(governance): make concurrent authority evidence deterministic